Creating images in memory works

--- a/archive/challenge-0007/recursive-image/Makefile
+++ b/archive/challenge-0007/recursive-image/Makefile
@@ -1,5 +1,8 @@
 all:
-	ghc main.hs -odir obj/ -hidir hi/ -O2
+	ghc main.hs -odir obj/ -hidir hi/
 
 clean:
-	rm -rf hi obj;
+	rm -rf hi obj hi-opt obj-opt;
+
+opt:
+	ghc -O2 main.hs -odir obj-opt -hidir hi-opt/ 
