I'm outputing weird things. MAYBE it's working.

--- a/archive/challenge-0007/recursive-image/Makefile
+++ b/archive/challenge-0007/recursive-image/Makefile
@@ -8,7 +8,7 @@ opt: clean
 	ghc -O3 main.hs -odir obj-opt -hidir hi-opt/ 
 
 # Replace with your image viewer
-s:
+s: all
 	./main > out.ppm;
 	feh out.ppm
 
