challenge 15: rust, fleas, try to update version

--- a/archive/challenge-0015/fleas/Cargo.toml
+++ b/archive/challenge-0015/fleas/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-
 name = "fleas"
 version = "0.0.1"
 authors = ["psyomn <lethaljellybean@gmail.com>"]
+
+[[bin]]
+name = "fleas-rs"
 
 [dependencies]
 rand = "*"
