challenge 17: wsearch, rust
Complete example with crates hyper, and regex

--- a/archive/challenge-0017/wsearch/Cargo.toml
+++ b/archive/challenge-0017/wsearch/Cargo.toml
@@ -1,4 +1,8 @@
 [package]
+authors = ["psyomn <lethaljellybean@gmail.com>"]
 name = "wsearch"
 version = "0.1.0"
-authors = ["psyomn <lethaljellybean@gmail.com>"]
+
+[dependencies]
+hyper = "0.6.15"
+regex = "0.1.41"
