Add solution p1 of advent 3

--- a/advent/2016/Makefile
+++ b/advent/2016/Makefile
@@ -1,5 +1,10 @@
-all:
+all: native byte
+
+native:
 	ocamlbuild -use-ocamlfind -tag bin_annot main.native -lib str
+
+byte:
+	ocamlbuild -use-ocamlfind -tag bin_annot main.byte -lib str
 
 clean:
 	ocamlbuild -clean
